データベースリファクタリング5/15

--- a/C#/MakeClassProgram(DataBase)/MakeClassProgram(DataBase).csproj
+++ b/C#/MakeClassProgram(DataBase)/MakeClassProgram(DataBase).csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class.cs" />
+    <Compile Include="ClassModel.cs" />
     <Compile Include="ClassCreater.cs" />
     <Compile Include="Control.cs" />
     <Compile Include="Argument.cs" />
