--- a/C#/MakeClassProgram(DataBase)/MakeClassProgram(DataBase).csproj
+++ b/C#/MakeClassProgram(DataBase)/MakeClassProgram(DataBase).csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class.cs" />
+    <Compile Include="ClassDisplay.cs" />
+    <Compile Include="ClassHasElementDisplay.cs" />
     <Compile Include="ClassModel.cs" />
     <Compile Include="Control.cs" />
     <Compile Include="Argument.cs" />
@@ -68,12 +70,14 @@
     <Compile Include="Field.cs" />
     <Compile Include="FieldDefinition.cs" />
     <Compile Include="FieldModel.cs" />
+    <Compile Include="IObserver.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Method.cs" />
     <Compile Include="MethodDefinition.cs" />
     <Compile Include="MethodModel.cs" />
     <Compile Include="CommonModel.cs" />
     <Compile Include="Model.cs" />
+    <Compile Include="IObservable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View.cs" />
   </ItemGroup>
